--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -21,10 +21,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favRecyclerView"
-        android:layout_width="408dp"
-        android:layout_height="651dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backToHomeButton" />
 
@@ -34,9 +36,10 @@
         android:layout_height="wrap_content"
         android:text="Your Favs"
         android:textAlignment="textEnd"
-        android:textColor="#ffffff"
+        android:textColor="#ffa500"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:background="@drawable/rounded_corner"
         app:layout_constraintBottom_toBottomOf="@+id/backToHomeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/backToHomeButton" />
