--- a/app/src/main/res/layout/activity_user_privacy.xml
+++ b/app/src/main/res/layout/activity_user_privacy.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".UserPrivacy">
 
+
+    <TextView
+        android:layout_width="410dp"
+        android:layout_height="645dp"
+        android:text="@string/privacy"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
