qr page update.

--- a/app/src/main/res/layout/activity_retrieve_q_r.xml
+++ b/app/src/main/res/layout/activity_retrieve_q_r.xml
@@ -4,8 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/curbside_gradient_background"
     tools:context=".RetrieveQRActivity">
+
+    <Button
+        android:id="@+id/backToHomeButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/downloadButton"
