--- a/app/src/main/res/layout/activity_user_privacy.xml
+++ b/app/src/main/res/layout/activity_user_privacy.xml
@@ -12,11 +12,15 @@
     <TextView
         android:layout_width="350dp"
         android:layout_height="596dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/privacy"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
 
     <Button
         android:id="@+id/backToHomeButton"
