--- a/app/src/main/res/layout/activity_see_trucks.xml
+++ b/app/src/main/res/layout/activity_see_trucks.xml
@@ -10,13 +10,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
+        android:layout_width="372dp"
+        android:layout_height="603dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backToVendorOptions" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="120dp"/>
 
     <Button
         android:id="@+id/backToVendorOptions"
